# premiere_league_api

./: README.md  pyproject.toml
querys-bigquery/views/: vw_fixtures_away.sql  vw_fixtures_home.sql  vw_fixtures_total.sql  vw_stadium.sql  vw_statistics.sql  vw_status.sql  vw_teams.sql
src/: config.py  main.py
src/extract/: extract.py
src/load/: load.py
src/transform/: transform.py
tests/: conftest.py  test_extract.py  test_load.py  test_transform.py
webscrapping/: main.py  url_base.txt
webscrapping/extract/: extract_scrapy.py
webscrapping/load/: load_scrapy.py
webscrapping/notebook/: notebook_scrapy.ipynb
webscrapping/transform/: transform_scrapy.py
